# ingdatos_icc742_ride_booking

./: .dockerignore  .env.docker  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CONVERSION_SUMMARY.md  DOCKER.md  Dockerfile  ETL_ARCHITECTURE.md  ETL_QUICKSTART.md  ETL_README_OLD.md.bak  ICEBERG_README.md  Makefile  QUICKSTART.md  README.md  dashboard.py  docker-compose.yml  prefect.yaml  pyproject.toml  run_all_dashboards.sh  run_dashboard.sh  run_iceberg_etl.py  run_sql_query.sh  test_granular_etl.py  test_granular_flow.py  verify_implementation.py
.github/: copilot-instructions.md
app/: __init__.py
app/adapters/: __init__.py  example_usage.py  iceberg_adapter.py  iceberg_schemas.py  postgresql.py
app/config/: __init__.py  settings.py
app/etl/: __init__.py  bootstrap.py  bronze_layer.py  cli.py  deploy.py  flows.py  gold_layer.py  gold_layer_iceberg.py  silver_layer.py  silver_layer_iceberg.py
app/etl/tasks/: __init__.py
app/etl/tasks/bronze/: __init__.py  booking.py  booking_status.py  cancelled_ride.py  customer.py  incompleted_ride.py  location.py  ride.py  (+3 more)
app/tools/: wipe_database.py
data/: Preview_-_Gold.csv  Preview_-_Silver.csv  Preview_-_bronze.csv
examples/: run_etl_example.py
init-db/: 01_create_schemas.sql  02_create_medallion_schema.sql
scripts/: README.md  check_location.py  create_date_slice.py  run_etl_for_date.py
scripts/date_slices/: MARCH_2024_ETL_SUMMARY.md  _template_etl.py  _template_verify.py  run_march_2024_etl.py  verify_march_2024.py
streamlit_apps/: README.md  dashboard.py  sql_query.py
warehouse/: catalog.db
(+52 files in other folders)
