[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "ride-booking-etl"
version = "0.1.0"
description = "Prefect-based ETL scaffolding for ride booking analytics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "prefect>=2.14,<3.0",
    "pydantic>=2.5,<3.0",
    "python-dotenv>=1.0,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "pandas>=2.0,<3.0",
]

[project.scripts]
ride-booking-bootstrap = "app.etl.bootstrap:run_bootstrap"

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E203", "E266", "E501"]
